--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
     <nav class="menu">
         <a href="index.html">Hem</a>
-        <a href="">Stränder</a>
-        <a href="">Restauranger</a>
-        <a href="">Att göra</a>
-        <a href="">Boka aktiviteter</a>
+        <a href="beaches.html">Stränder</a>
+        <a href="restaurants.html">Restauranger</a>
+        <a href="todo.html">Att göra</a>
+        <a href="booking.html">Boka aktiviteter</a>
     </nav>
 
     <main>
@@ -28,16 +28,16 @@
             <h3>Aktuell temperatur på Rhodos</h3>
             <span> 31°C</span>
         </section>
-        
+
         <section id="villageslist">
             <h2>Byar att besöka på Rhodos</h2>
             <div id="villages-list">
                 <ul>
-                    <li><a href="" target="_blank">Faliraki</a></li>
-                    <li><a href="" target="_blank">Lindos</a></li>
-                    <li><a href="" target="_blank">Tsambika</a></li>
-                    <li><a href="" target="_blank">Ixia</a></li>
-                    <li><a href="" target="_blank">Koskinou</a></li>
+                    <li><a href="">Faliraki</a></li>
+                    <li><a href="">Lindos</a></li>
+                    <li><a href="">Tsambika</a></li>
+                    <li><a href="">Ixia</a></li>
+                    <li><a href="">Koskinou</a></li>
                 </ul>
             </div>
         </section>
