Add more css, fixed text boxes and images

--- a/beaches.html
+++ b/beaches.html
@@ -20,21 +20,29 @@
     </nav>
 
     <main class="content">  
-    <img src="https://www.rodosapex.com/photos/elli-beach-rhodos-469791.jpg" alt="Elli beach bild" width="700" height="auto">
+        <div class="image-container">
+            <img src="https://www.rodosapex.com/photos/elli-beach-rhodos-469791.jpg" alt="Elli beach bild" class="image">
+            <div class="text-box">
+                <h2>Elli Beach</h2>
+                <p class="info-text">Elli Beach, belägen i hjärtat av Rhodos stad, är en av de mest populära och livliga stränderna på ön. Denna strand, som sträcker sig längs nordöstra kusten, erbjuder en fantastisk utsikt över det kristallklara Egeiska havet. Med sin mjuka gyllene sand och småsten är Elli Beach perfekt för både solbad och promenader längs vattnet.</p>
+                <p class="info-text">Stranden är väl utrustad med solstolar, parasoller och strandbarer, vilket gör det enkelt att tillbringa en hel dag här. För de äventyrliga finns det ett brett utbud av vattensporter, inklusive snorkling, dykning och jet-ski. Elli Beach är också känd för sitt ikoniska dykbräde som lockar både lokala och turister till att ta ett djärvt hopp i det blå vattnet.</p>
+                <p class="info-text">Med sitt närhet till centrala Rhodos stad, är det lätt att kombinera en dag på stranden med shopping, sightseeing och en måltid på någon av de närliggande restaurangerna. Elli Beach är den perfekta destinationen för dem som söker både avkoppling och aktivitet i en vacker miljö.</p>
+            </div>
+        </div>
 
-    <h2>Elli Beach</h2>
-    <p class="info-text">Elli Beach, belägen i hjärtat av Rhodos stad, är en av de mest populära och livliga stränderna på ön. Denna strand, som sträcker sig längs nordöstra kusten, erbjuder en fantastisk utsikt över det kristallklara Egeiska havet. Med sin mjuka gyllene sand och småsten är Elli Beach perfekt för både solbad och promenader längs vattnet.</p>
-    <p class="info-text">Stranden är väl utrustad med solstolar, parasoller och strandbarer, vilket gör det enkelt att tillbringa en hel dag här. För de äventyrliga finns det ett brett utbud av vattensporter, inklusive snorkling, dykning och jet-ski. Elli Beach är också känd för sitt ikoniska dykbräde som lockar både lokala och turister till att ta ett djärvt hopp i det blå vattnet.</p>
-    <p class="info-text">Med sitt närhet till centrala Rhodos stad, är det lätt att kombinera en dag på stranden med shopping, sightseeing och en måltid på någon av de närliggande restaurangerna. Elli Beach är den perfekta destinationen för dem som söker både avkoppling och aktivitet i en vacker miljö.</p>
-    <hr>
+        <hr>
 
-    <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/5a/14/58/photo0jpg.jpg?w=1200&h=-1&s=1" alt="Stegna beach bild" width="700" height="auto">
-    
-    <h2>Stegna</h2>
-    <p class="info-text">Stegna Strand, belägen på Rhodos östkust nära den pittoreska byn Archangelos, är en av öns mest avkopplande och charmiga stränder. Denna orörda pärla är känd för sin avslappnade atmosfär, där turister kan njuta av lugnet långt från de mer livliga turistområdena.</p>
-    <p class="info-text">Med sin fina sand och små klapperstenar, erbjuder Stegna Strand en bekväm plats för både solbad och strandpromenader. Vattnet är kristallklart och lugnt, vilket gör det perfekt för simning och snorkling. Den omgivande naturen, med sina klippiga kullar och det turkosblå havet, skapar en idyllisk miljö som bjuder in till total avkoppling.</p>
-    <p class="info-text">Längs strandpromenaden finns det flera mysiga tavernor och caféer där du kan smaka på färska skaldjur och traditionella grekiska rätter, ofta tillagade med ingredienser från den lokala regionen. Stegna Strand är ett utmärkt val för familjer, par och alla som söker en genuin och stillsam upplevelse på Rhodos, bortom det hektiska tempot i de större turistorterna.</p>
-    <hr>
+        <div class="image-container">
+            <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0f/5a/14/58/photo0jpg.jpg?w=1200&h=-1&s=1" alt="Stegna beach bild" class="image">
+            <div class="text-box">
+                <h2>Stegna</h2>
+                <p class="info-text">Stegna Strand, belägen på Rhodos östkust nära den pittoreska byn Archangelos, är en av öns mest avkopplande och charmiga stränder. Denna orörda pärla är känd för sin avslappnade atmosfär, där turister kan njuta av lugnet långt från de mer livliga turistområdena.</p>
+                <p class="info-text">Med sin fina sand och små klapperstenar, erbjuder Stegna Strand en bekväm plats för både solbad och strandpromenader. Vattnet är kristallklart och lugnt, vilket gör det perfekt för simning och snorkling. Den omgivande naturen, med sina klippiga kullar och det turkosblå havet, skapar en idyllisk miljö som bjuder in till total avkoppling.</p>
+                <p class="info-text">Längs strandpromenaden finns det flera mysiga tavernor och caféer där du kan smaka på färska skaldjur och traditionella grekiska rätter, ofta tillagade med ingredienser från den lokala regionen. Stegna Strand är ett utmärkt val för familjer, par och alla som söker en genuin och stillsam upplevelse på Rhodos, bortom det hektiska tempot i de större turistorterna.</p>
+            </div>
+        </div>
+        
+        <hr>
 
     </main>
     <footer class ="footer">
