looks ok now but index page needs fixing

--- a/index.html
+++ b/index.html
@@ -19,23 +19,22 @@
         <a href="booking.html">Boka aktiviteter</a>
     </nav>
 
-    <main class="content">
-        <div class="image-container">
+    <main class="content-with-sidebar">
+        <div class="image-container-index">
             <img src="https://www.travelandleisure.com/thmb/S72abBLrX_H_vNUeigg9h9UH7wQ=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/TAL-lindos-acropolis-RHODESGR0124-e0de6951a1d446bc88061918289971ba.jpg" alt="Rhodos bild startsida" class="image">
-            <div class="text-box">
-            <p class="info-text">Rhodos är en charmig grekisk ö belägen i Egeiska havet, känd för sina vackra stränder, rika historia och livliga kultur. Ön är hem till den historiska gamla staden Rhodos, en UNESCO-världsarvslista med medeltida murar och imponerande arkitektur. Besökare kan utforska de antika ruinerna av Kamiros och Lindos, samt njuta av den fantastiska utsikten från Akropolis i Lindos. Rhodos erbjuder också ett brett utbud av aktiviteter, från avkopplande dagar på soliga stränder till äventyrliga vattensporter och vandring i de natursköna landskapen. Lokala restauranger serverar utsökt grekisk mat och färska skaldjur, vilket gör varje måltid till en fest för smaklökarna. Med sitt behagliga klimat och vänliga lokalbefolkning är Rhodos en idealisk destination för både avslappning och upptäcktsfärd.</p>
+            <div class="text-box-index">
+                <p class="info-text">Rhodos är en charmig grekisk ö belägen i Egeiska havet, känd för sina vackra stränder, rika historia och livliga kultur. Ön är hem till den historiska gamla staden Rhodos, en UNESCO-världsarvslista med medeltida murar och imponerande arkitektur. Besökare kan utforska de antika ruinerna av Kamiros och Lindos, samt njuta av den fantastiska utsikten från Akropolis i Lindos. Rhodos erbjuder också ett brett utbud av aktiviteter, från avkopplande dagar på soliga stränder till äventyrliga vattensporter och vandring i de natursköna landskapen. Lokala restauranger serverar utsökt grekisk mat och färska skaldjur, vilket gör varje måltid till en fest för smaklökarna. Med sitt behagliga klimat och vänliga lokalbefolkning är Rhodos en idealisk destination för både avslappning och upptäcktsfärd.</p>
+            </div>
         </div>
-
-    </main>
 
     <div class="sidebar">
         <section id="weather">
             <h3>Aktuell temperatur på Rhodos</h3>
-            <span> 31°C</span>
+            <span>31°C</span>
         </section>
 
         <section id="villageslist">
-            <h2>Byar att besöka på Rhodos</h2>
+            <h3>Byar att besöka på Rhodos</h3>
             <div id="villages-list">
                 <ul>
                     <li><a href="">Faliraki</a></li>
@@ -47,6 +46,7 @@
             </div>
         </section>
     </div>
+    </main>
         
     <footer class ="footer">
         <p>&copy; 2024 Rhodosguiden</p>
