--- a/booking.html
+++ b/booking.html
@@ -11,6 +11,14 @@
         <h1>Rhodosguiden - din guide till stränder, kultur och äventyr</h1>
     </header>
 
+    <nav class="menu">
+        <a href="index.html">Hem</a>
+        <a href="beaches.html">Stränder</a>
+        <a href="restaurants.html">Restauranger</a>
+        <a href="todo.html">Att göra</a>
+        <a href="booking.html">Boka aktiviteter</a>
+    </nav>
+
     <main class="form-page">
         <h2>Boka aktiviteter med oss</h2>
         <p>Här kan du skicka din bokningsförfrågan!</p>
