Fixed css for sidebar on index page, new font, updated text

--- a/index.html
+++ b/index.html
@@ -29,19 +29,28 @@
 
     <div class="sidebar">
         <section id="weather">
-            <h3>Aktuell temperatur på Rhodos</h3>
-            <span>31°C</span>
+            <h3>Aktuell temperatur</h3>
+            <span>31°C ☀️</span>
         </section>
 
+        <br>
+
         <section id="villageslist">
-            <h3>Byar att besöka på Rhodos</h3>
             <div id="villages-list">
+                <h3>Ställen att besöka på Rhodos</h3>
                 <ul>
                     <li><a href="">Faliraki</a></li>
                     <li><a href="">Lindos</a></li>
                     <li><a href="">Tsambika</a></li>
                     <li><a href="">Ixia</a></li>
                     <li><a href="">Koskinou</a></li>
+                    <li><a href="">Rhodos stad</a></li>
+                    <li><a href="">Kamiros</a></li>
+                    <li><a href="">Prasonisi</a></li>
+                    <li><a href="">Afandou</a></li>
+                    <li><a href="">Kalithea</a></li>
+                    <li><a href="">Monolithos</a></li>
+                    <li><a href="">Archangelos</a></li>
                 </ul>
             </div>
         </section>
