--- a/restaurants.html
+++ b/restaurants.html
@@ -26,8 +26,8 @@
             <img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/0a/ef/54/ba/horiatiky.jpg?w=1200&h=-1&s=1" alt="To Steno bild mat" class="image">
             <div class="text-box">
                 <h2>To Steno</h2>
-                <p class="info-text">To Steno, beläget i hjärtat av den gamla stadsdelen i Rhodos stad, är en charmig och autentisk grekisk taverna som erbjuder en oförglömlig matupplevelse. Denna familjeägda restaurang är känd för sin varma och inbjudande atmosfär, där besökare kan njuta av traditionella rätter tillagade med omsorg och kärlek.</p>
-                <p class="info-text">Menyvalet på To Steno speglar det bästa av det grekiska köket, med en fokus på färska, lokala ingredienser. Här kan du smaka på klassiker som moussaka, souvlaki och färsk fisk direkt från Medelhavet. De hemlagade mezze-tallrikarna är också populära och ger en smakresa genom Greklands kulinariska arv.</p>
+                <p class="info-text">To Steno, beläget ett stenkast från gamla stan uppe i gränderna, är en charmig och autentisk grekisk taverna som erbjuder en oförglömlig matupplevelse. Denna familjeägda restaurang är känd för sin varma och inbjudande atmosfär, där besökare kan njuta av traditionella rätter tillagade med omsorg och kärlek.</p>
+                <p class="info-text">Menyvalet på To Steno speglar det bästa av det grekiska köket, med en fokus på färska, lokala ingredienser. Här kan du smaka på spännande rätter som friterad zucchiniblomma fylld med fetaost, ostbollar och bläckfisk direkt från Medelhavet. De hemlagade mezze-tallrikarna är populära och ger en smakresa genom Greklands kulinariska arv.</p>
                 <p class="info-text">Restaurangen ligger på en smal, pittoresk gata som ger den sitt namn ("Steno" betyder "smal" på grekiska) och erbjuder en mysig uteservering, där gästerna kan avnjuta sin måltid i den ljumma kvällsluften. Oavsett om du letar efter en romantisk middag för två eller en plats att samlas med vänner, är To Steno det perfekta valet för en äkta grekisk matupplevelse i en historisk miljö.</p>
             </div>
         </div>
@@ -38,8 +38,8 @@
             <div class="text-box">
                 <h2>Mr G's Streetfood</h2>
                 <p class="info-text">Mr. G's Streetfood är ett populärt matställe i Rhodos stad som erbjuder en modern och kreativ twist på traditionell grekisk streetfood. Med en passion för god mat och en känsla för detaljer, har Mr. G's snabbt blivit en favorit bland både lokalbefolkning och turister.</p>
-                <p class="info-text">På menyn hittar du ett brett utbud av läckra rätter, allt från saftiga gyros och smakrika souvlaki till innovativa wraps och fräscha sallader. Varje rätt är tillagad med färska, lokala ingredienser och serveras snabbt, vilket gör det till ett perfekt val för en snabb, men ändå tillfredsställande måltid.</p>
-                <p class="info-text">Mr. G's Streetfood erbjuder också ett urval av veganska och vegetariska alternativ, vilket gör det till ett populärt val för alla smaker. Med sin avslappnade atmosfär och prisvärda priser är detta matställe ett måste för alla som vill uppleva äkta grekisk streetfood när den är som bäst.</p>
+                <p class="info-text">På menyn hittar du ett brett utbud av läckra rätter, allt från saftiga gyros och smakrika souvlaki till fräsch grekisk sallad. Varje rätt är tillagad med färska, lokala ingredienser och serveras snabbt, vilket gör det till ett perfekt val för en snabb lunch.</p>
+                <p class="info-text">Mr. G's Streetfood erbjuder också ett urval av vegetariska alternativ, vilket gör det till ett populärt val för alla smaker. Med sin avslappnade atmosfär och låga priser är detta matställe ett måste för alla som vill uppleva äkta grekisk streetfood när den är som bäst.</p>
             </div>
         </div>
     </main>
