JSON fetch sightseeing list and css

--- a/todo.html
+++ b/todo.html
@@ -42,9 +42,38 @@
         </div>
     </div>
 
+<!-- Sektion för att visa utflyktsmål -->
+<section id="sightseeing-list" class="image-container">
+    <img src="https://www.griechenland.de/images/_1200x675_crop_center-center_90_none/Tsambika-Kloster_Rhodos_Griechenland.jpg" alt="Tsambika kloster" class="image">
+    <h2>Sevärdheter på Rhodos</h2>
+    <ul id="sightseeing"></ul>
+</section>
+
     </main>
 <footer class ="footer">
     <p>&copy; 2024 Rhodosguiden</p>
 </footer>
+
+ <!-- JavaScript för att hämta och visa sevärdhetsdata -->
+ <script>
+    function fetchSightseeing() {
+        fetch('json/sightseeing.json')
+            .then(response => response.json())
+            .then(data => {
+                const sightseeingList = document.getElementById('sightseeing');
+                
+                data.sightseeing.forEach(place => {
+                    const listItem = document.createElement('li');
+                    listItem.innerHTML = `<strong>${place.title}</strong>: ${place.description}`;
+                    sightseeingList.appendChild(listItem);
+                });
+            })
+            .catch(error => console.error('Fel vid hämtning av data:', error));
+    }
+
+    // Anropar funktionen för att hämta och visa sevärdheter
+    fetchSightseeing();
+</script>
+
 </body>
 </html>
