--- a/booking.html
+++ b/booking.html
@@ -31,6 +31,7 @@
 
             <label for="tour">Välj tur:</label><br>
             <select id="tour" name="tour" required>
+                <option value="" disabled selected>-- Välj en tur --</option>
                 <option value="shuttle_bus">Dagstur till Lindos med Shuttle Bus</option>
                 <option value="boat_tour">Båttur runt Rhodos</option>
             </select><br><br>
